# small-steps

./: LICENSE  README.md  _CoqProject  coq-smallsteps.opam
.github/workflows/: ci.yml
theories/: mrel.v  relalg.v
