opam-version: "2.0"
maintainer: "Evgenii Moiseenko <evg.moiseenko94@gmail.com>"
version: "dev"

homepage: "https://github.com/event-structures/small-steps"
dev-repo: "git+https://github.com/event-structures/small-steps.git"
bug-reports: "https://github.com/event-structures/small-steps/issues"
doc: "https://event-structures.github.io/small-steps/"
license: "MIT"

synopsis: "Hierarchy of monads for small-steps semantics"
# TODO:
# description: """
# """

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.10" & < "8.14~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.12" & < "1.13~") | (= "dev")}
  "coq-mathcomp-finmap" {(>= "1.5.1") | (= "dev")}
  "coq-relation-algebra" {(>= "1.7.4")}
  "coq-monae" {(>= "0.2.2") | (= "dev")}
  "coq-equations"
]
conflicts: [
  "coq-equations" {(= "dev+HoTT")}
]
tags: [
  "keyword:monads"
  "keyword:operational semantics"
  "category:Computer Science/Semantics"
  "logpath:smallsteps"
]
authors: [
  "Evgenii Moiseenko <evg.moiseenko94@gmail.com>"
  "Vladimir Gladstein <vovaglad00@gmail.com>"
  "Dmitrii Mikhailovskii <mikhaylovskiy.dmitriy@gmail.com>"
  "Anton Trunov <anton.a.trunov@gmail.com>"
]
